[gd_scene load_steps=6 format=3 uid="uid://dbaytthmlmbo0"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_nt3ir"]
[ext_resource type="Texture2D" uid="uid://dmkgxgfvjbfi1" path="res://assets/car1.png" id="2_duebj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jxw2k"]
radius = 10.6666
height = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bk3p7"]
size = Vector2(4.29799, 4.13033)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_td18n"]
radius = 20.0
height = 109.333

[node name="5" type="CharacterBody2D" node_paths=PackedStringArray("destination")]
top_level = true
position = Vector2(8, 724)
scale = Vector2(0.75, 0.75)
collision_layer = 16384
collision_mask = 147518
motion_mode = 1
safe_margin = 5.0
script = ExtResource("1_nt3ir")
destination = NodePath("")
acceleration = 0.05

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_duebj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jxw2k")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(1, 1.1)

[node name="RayCast2D" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.00533192
target_position = Vector2(101, 0)
collision_mask = 147486
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.00533192
target_position = Vector2(74.8816, -22.3996)
collision_mask = 147486

[node name="RayCast2D3" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.00533192
target_position = Vector2(70.1003, 18.6265)
collision_mask = 147486

[node name="RayCast2D4" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.00533192
target_position = Vector2(43.1327, 24.7704)
collision_mask = 147486

[node name="RayCast2D5" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.00499991
target_position = Vector2(38.8595, -28.1946)
collision_mask = 147486

[node name="RayCast2D6" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.175034
target_position = Vector2(52.412, -36.6877)
collision_mask = 147486

[node name="RayCast2D7" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.456551
target_position = Vector2(70.5948, -53.6132)
collision_mask = 147486

[node name="RayCast2D8" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.456551
target_position = Vector2(80.8455, -48.6209)
collision_mask = 147486

[node name="RayCast2D9" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.456551
target_position = Vector2(86.5608, -34.7165)
collision_mask = 147486

[node name="RayCast2D10" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.456551
target_position = Vector2(80.671, -24.0248)
collision_mask = 147486

[node name="RayCast2D11" type="RayCast2D" parent="." groups=["raycast"]]
rotation = 0.456551
target_position = Vector2(60.4041, -4.04358)
collision_mask = 147486

[node name="RightSideLight" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 17.0
offset_top = 4.0
offset_right = 22.0
offset_bottom = 9.0
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="LeftSideLight" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 17.0
offset_top = -9.0
offset_right = 22.0
offset_bottom = -4.0
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="StopTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="RightSideLightTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="LeftSideLightTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CarSideArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 32
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarSideArea"]
position = Vector2(-2.66667, 20.5842)
rotation = 3.14159
scale = Vector2(8.68624, 2.29966)
shape = SubResource("RectangleShape2D_bk3p7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CarSideArea"]
position = Vector2(-2.66667, -20)
rotation = 3.14159
scale = Vector2(8.68624, 2.29966)
shape = SubResource("RectangleShape2D_bk3p7")

[node name="AmbulanceDetectionArea" type="Area2D" parent="."]
collision_layer = 1048576
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="AmbulanceDetectionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_td18n")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="StopTimer" to="." method="_on_stop_timer_timeout"]
[connection signal="timeout" from="RightSideLightTimer" to="." method="_on_side_light_timer_timeout"]
[connection signal="timeout" from="LeftSideLightTimer" to="." method="_on_left_side_light_timer_timeout"]
[connection signal="body_entered" from="CarSideArea" to="." method="_on_car_side_area_body_entered"]
[connection signal="body_exited" from="CarSideArea" to="." method="_on_car_side_area_body_exited"]
[connection signal="body_entered" from="AmbulanceDetectionArea" to="." method="_on_ambulance_detection_area_body_entered"]
